<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Auto Boot Menu</string>
    <string name="action_settings">Settings</string>
    <string name="shutdown">Power off</string>
    <string name="shutdown_summary">Turns your device off.</string>
    <string name="ic_shutdown">Icon for shutdown button</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_summary">Restart your device.</string>
    <string name="ic_reboot">Icon for reboot></string>
    <string name="reboot_recovery">Recovery</string>
    <string name="reboot_recovery_summary">Restart and boot into your devices recovery.</string>
    <string name="ic_reboot_recovery">Icon for recovery</string>
    <string name="root_status">Root status</string>
    <string name="root_status_no">Root not available - this app wont work properly</string>
    <string name="root_status_yes">Available.</string>
    <string name="close">Close</string>
</resources>
