<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/dialogMargin"
    android:minWidth="@dimen/dialogMinWidth"
    app:cardBackgroundColor="@color/dialogBackgroundColor"
    app:cardElevation="@dimen/dialogElevation"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/bootmenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/autobootmenuMinHeight"
            android:orientation="vertical"
            android:padding="@dimen/autobootmenuPadding">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/autobootmenuTitlePaddingBottom"
                android:text="@string/app_name" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerHeight"
            android:background="@color/dividerBackgroundColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_shutdown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ic_shutdown"
                android:src="@drawable/ic_shutdown" />

            <TextView
                android:id="@+id/shutdown"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="@dimen/textWidth"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="@dimen/itemMinHeight"
                android:padding="@dimen/itemPadding"
                android:text="@string/shutdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_reboot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ic_reboot"
                android:src="@drawable/ic_reboot" />

            <TextView
                android:id="@+id/reboot"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="@dimen/textWidth"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="@dimen/itemMinHeight"
                android:padding="@dimen/itemPadding"
                android:text="@string/reboot" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_reboot_recovery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ic_reboot_recovery"
                android:src="@drawable/ic_recovery" />

            <TextView
                android:id="@+id/reboot_recovery"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="@dimen/textWidth"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="@dimen/itemMinHeight"
                android:padding="@dimen/itemPadding"
                android:text="@string/reboot_recovery" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
